# Forscape-settings

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: forscape_q_settings_diff.h  forscape_settings_diff_dialog.h
meta/: codegen.py  codegen_ui.py  forscape_settings_diff_dialog.ui  settings_definition.json
src/: forscape_q_settings_diff.cpp  forscape_settings_diff.cpp  forscape_settings_diff.h  forscape_settings_diff_dialog.cpp  forscape_settings_diff_dialog.h  forscape_settings_diff_dialog.ui
test/: test_settings.cpp  test_settings_diff.cpp  visualise_diff_dialog.cpp
vcpkg_customisations/triplets/: x86-linux-dynamic.cmake
